--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "js-cookie": "^3.0.1",
+    "mongoose": "^6.8.1",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
