--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "js-cookie": "^3.0.1",
     "mongoose": "^6.8.1",
     "next": "13.0.7",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
